2005-09-10  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpiscissorstool.c	(gimp_iscissors_tool_button_release):
	use gimp_draw_tool_on_handle() to figure if we need to close the
	path. Makes sure that the anchor's sensitive area matches its size
	on screen. Fixes bug #134250.

2005-09-10  Michael Natterer  <mitch@gimp.org>

	* libgimpbase/gimpbase-private.h: GimpUnitVTable -> GimpUnitVtable

	* libgimpbase/gimpbase-private.c
	* libgimp/gimp.c (gimp_main)
	* app/units.c (units_init): changed accordingly.

2005-09-10  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpclonetool.c (gimp_clone_options_gui): moved the
	"Sample merged" toggle below the "Image source" radio button.
	Also fixed capitalization of "Sample merged".

2005-09-10  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpprogress.h: match parameter name in .c file.

2005-09-09  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/aa.c
	* plug-ins/common/csource.c
	* plug-ins/common/gbr.c
	* plug-ins/common/gih.c
	* plug-ins/common/gtm.c
	* plug-ins/common/mng.c
	* plug-ins/common/pat.c
	* plug-ins/common/png.c
	* plug-ins/common/pnm.c
	* plug-ins/common/postscript.c
	* plug-ins/common/psp.c
	* plug-ins/common/raw.c
	* plug-ins/common/sunras.c
	* plug-ins/common/tga.c
	* plug-ins/common/tiff.c
	* plug-ins/common/xbm.c
	* plug-ins/common/xpm.c
	* plug-ins/gfli/gfli.c
	* plug-ins/jpeg/jpeg-save.c
	* plug-ins/sgi/sgi.c
	* plug-ins/winicon/icodialog.c: actually call
	gimp_window_set_transient() on save dialogs.
	Really fixes bug #62988.

2005-09-09  Michael Natterer  <mitch@gimp.org>

	Added parent window API to the GimpProgress interface and to
	the libgimp progress stuff. Might look strange, but does
	the right thing in almost all cases (image window, file dialog,
	script-fu dialog etc). Fixes bug #62988.

	* app/core/gimpprogress.[ch]: added GimpProgress::get_window()
	which should return a toplevel window ID if the progress is in a
	window that wants to be the transient parent of plug-in dialogs.
